Feat: generate product sheet
